--- a/Desafios a solo/ds012 guenabara/style.css
+++ b/Desafios a solo/ds012 guenabara/style.css
@@ -16,7 +16,7 @@
 }
 html, body{
     min-height: 100vh;
-    background-color: #60ff52;
+    background-color: #ffffff;
     font-family: var(--fonte3);
 }
 
